# SudoTalk

./: README.md  main.py  pyproject.toml
app/: VectorDB.py  indexing.py  llm.py  main.py  retreival.py  system_prompt.py
