[project]
name = "sudotalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.4.0",
    "qdrant-client>=1.16.1",
    "streamlit>=1.52.0",
]
